@@ -2083,6 +2083,10 @@ HRESULT STDMETHODCALLTYPE WebView::initWithFrame(
 
     m_page = new Page(new WebChromeClient(this), new WebContextMenuClient(this), new WebEditorClient(this), new WebDragClient(this), new WebInspectorClient(this));
 
+    IWebNotificationCenter* notifyCenter = WebNotificationCenter::defaultCenterInternal();
+    notifyCenter->addObserver(this, WebPreferences::webPreferencesChangedNotification(), static_cast<IWebPreferences*>(m_preferences.get()));
+    m_preferences->postPreferencesChangesNotification();
+    
     if (m_uiDelegate) {
         COMPtr<IWebUIDelegate2> uiDelegate2;
         if (SUCCEEDED(m_uiDelegate->QueryInterface(IID_IWebUIDelegate2, (void**)&uiDelegate2))) {
@@ -2111,10 +2115,6 @@ HRESULT STDMETHODCALLTYPE WebView::initWithFrame(
 
     initializeToolTipWindow();
     windowAncestryDidChange();
-
-    IWebNotificationCenter* notifyCenter = WebNotificationCenter::defaultCenterInternal();
-    notifyCenter->addObserver(this, WebPreferences::webPreferencesChangedNotification(), static_cast<IWebPreferences*>(m_preferences.get()));
-    m_preferences->postPreferencesChangesNotification();
 
     setSmartInsertDeleteEnabled(TRUE);
     return hr;
